tests/od2trips/errors/format/amitran/duration_negative/errors.od2trips
Error: Invalid duration for timeSlice starting 0.
Error: Loading failed.
Quitting (on error).
